# trex

./: README.md
index_creation/: CMakeLists.txt  full_runscript_bitcoin.sh  full_runscript_foo.sh  full_runscript_hepmass.sh  full_runscript_higgs.sh  full_runscript_landsat.sh  full_runscript_sgemm.sh  full_runscript_susy.sh
index_creation/src/: .model.cpp.swp  json_reader.cpp  json_reader.h  main.cpp  model.cpp  model.h  mortonND_BMI2.h  polydb.cpp  polydb.h  polytope.cpp  polytope.h  static_sort.h  utils.cpp  utils.h
inference/: inference_nooptimizations.cpp  inference_novectorization.cpp  inference_quantized_external_memory.cpp  inference_vectorized_256.cpp
model_training/: distribution_train_hyper_prune.py  train_models_run.sh
